<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/menu_stock"
            android:icon="@drawable/stockicon"
            android:title="@string/stock" />

        <item
            android:id="@+id/menu_dashboard"
            android:icon="@drawable/bar_chart"
            android:title="@string/Dasboard" />

        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/menu_catalogue"
            android:icon="@drawable/catalogue"
            android:title="@string/manage_cat" />

        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
    </group>



</menu>
